registrybackend: use unicode calls intead of the ansi ones

https://bugzilla.gnome.org/show_bug.cgi?id=761504